--- a/style.css
+++ b/style.css
@@ -23,3 +23,12 @@ footer {
   text-align: center;
   padding: 1rem;
 }
+a {
+  color: #2d7dd2;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
